2008-03-26  Alexander Larsson  <alexl@redhat.com>

        * daemon/gvfsbackendsftp.c:
	Pass id via the command object, not via out parameter.
	Removes a bunch of code to pass the id around.

2008-03-25  Carlos Garcia Campos  <carlosgc@gnome.org>

	* daemon/gvfschannel.c: (got_request), (send_reply_cb):
	Do not create new read/write jobs if the gvfschannel has been
	cancelled. Fixes a crash in sftp backend (#522192).
	
2008-03-25  Paolo Borelli  <pborelli@katamail.com>

	* daemon/gvfsbackendtrash.c (add_extra_trash_info):
	Make sure the display name is correct even for subdirectories
	inside the trash. (#523127)

2008-03-25  Alexander Larsson  <alexl@redhat.com>

	* daemon/gvfsbackendarchive.c (archive_file_set_info_from_entry):
	Better mount icons and root display name.

2008-03-24  A. Walton  <awalton@svn.gnome.org>

	* configure.ac:
	The CDDA backend requires HAL to build.
	Closes bug #524062.

2008-03-22  Christian Kellner  <gicmo@gnome.org>

	* client/Makefile.am:
	* configure.ac:
	* gconf/Makefile.am:
	* hal/Makefile.am:
	Respect the giomoduledir provided in gio's package config
	file. (#523852 and maybe #523039)

2008-03-20  Tomas Bzatek  <tbzatek@redhat.com>

	* daemon/gvfsbackendsmb.c:
	* daemon/gvfsbackendsmbbrowse.c:
	* daemon/libsmb-compat.h:
	Port to new smbclient API introduced in samba-3.2.0pre2

2008-03-19  Alexander Larsson  <alexl@redhat.com>

	* daemon/gvfsjobenumerate.c (send_reply): 
	* daemon/gvfsjobdbus.c (send_reply):
	Add job pointer to output spew to make it possible
	to match lines.

2008-03-19  Sebastian Dröge  <slomo@circular-chaos.org>

	* daemon/gvfsbackendsftp.c: (handle_login): Make the sftp backend
	work when pam_krb5 is used on the server side.

2008-03-18  Christian Kellner  <gicmo@gnome.org>

	* configure.ac: Post release version bump.

=== gvfs 0.2.1 ===

2008-03-17  Christian Kellner  <gicmo@gnome.org>

	* NEWS: Update for release

2008-03-17  Alexander Larsson  <alexl@redhat.com>

	* daemon/gvfsbackendftp.c (do_mount):