@@ -1,5 +1,10 @@
 2008-03-26  Alexander Larsson  <alexl@redhat.com>
 
+	* daemon/gvfsmonitor.c:
+	Send replies to subscribe and unsubscribe messages.
+
+2008-03-26  Alexander Larsson  <alexl@redhat.com>
+
         * daemon/gvfsbackendsftp.c:
 	Pass id via the command object, not via out parameter.
 	Removes a bunch of code to pass the id around.
